--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,5 +8,4 @@ edition = "2018"
 
 [dependencies]
 geometry3d = {path = "../geometry3d"}
-derive-getters = "0.2.0"
-
+simulation_state = { path = "../simulation_state" }
