--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,4 @@ edition = "2018"
 [dependencies]
 geometry3d = {path = "../geometry3d"}
 simulation_state = { path = "../simulation_state" }
+calendar = { path = "../calendar" }
