--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,14 @@ edition = "2018"
 
 [dependencies]
 geometry3d = {path = "../geometry3d"}
-simulation_state = { path = "../simulation_state" }
 calendar = { path = "../calendar" }
 schedule = { path = "../schedule" }
+building_state_macro = {path="../building_state_macro"}
+
+[dev-dependencies]
+criterion = "0.3.3"
+rand = "0.8.2"
+
+[[bench]]
+name = "benchmark"
+harness = false
