--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "building_model"
+name = "simple_model"
 version = "0.1.0"
 authors = ["German Molina <germolinal@gmail.com>"]
 edition = "2018"
@@ -7,15 +7,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-geometry3d = {path = "../geometry3d"}
+geometry3d = {git = "https://github.com/SIMPLE-BuildingSimulation/geometry3d.git"}
 calendar = { git = "https://github.com/SIMPLE-BuildingSimulation/calendar.git" }
-schedule = { path = "../schedule" }
-building_state_macro = {path="../building_state_macro"}
-
-[dev-dependencies]
-criterion = "0.3.3"
-rand = "0.8.2"
-
-[[bench]]
-name = "benchmark"
-harness = false
+schedule = { git = "https://github.com/SIMPLE-BuildingSimulation/schedule.git" }
+building_state_macro = { git = "https://github.com/SIMPLE-BuildingSimulation/building_state_macro.git" }
