--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,12 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-geometry3d = {git = "https://github.com/SIMPLE-BuildingSimulation/geometry3d.git"}
 calendar = { git = "https://github.com/SIMPLE-BuildingSimulation/calendar.git" }
+geometry3d = {git = "https://github.com/SIMPLE-BuildingSimulation/geometry3d.git"}
 schedule = { git = "https://github.com/SIMPLE-BuildingSimulation/schedule.git" }
 building_state_macro = { git = "https://github.com/SIMPLE-BuildingSimulation/building_state_macro.git" }
+
+
+[features]
+default = []
+float = ["geometry3d/float"]
