--- a/.github/workflows/test_and_deploy_doc.yml
+++ b/.github/workflows/test_and_deploy_doc.yml
@@ -20,6 +20,10 @@ jobs:
       run: cargo build --verbose
     - name: Run tests
       run: cargo test --verbose
+    - name: Build Float
+      run: cargo build --verbose --features float
+    - name: Run tests Float
+      run: cargo test --verbose --features float
     - name: Install MDBook
       run: cargo install mdbook
     - name: Build Book
