--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,16 +5,21 @@ authors = ["German Molina <germolinal@gmail.com>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[lib]
+crate-type = ["cdylib", "rlib"]
+
 
 [dependencies]
 calendar = { git = "https://github.com/SIMPLE-BuildingSimulation/calendar.git" }
 geometry3d = {git = "https://github.com/SIMPLE-BuildingSimulation/geometry3d.git"}
 schedule = { git = "https://github.com/SIMPLE-BuildingSimulation/schedule.git" }
-building_state_macro = { git = "https://github.com/SIMPLE-BuildingSimulation/building_state_macro.git" }
-# building_state_macro = { path = "../building_state_macro" }
-rhai = "1.1.1"
+# building_state_macro = { git = "https://github.com/SIMPLE-BuildingSimulation/building_state_macro.git" }
+building_state_macro = { path = "../building_state_macro" }
+rhai = { version = "1.1.1" }
+
 
 
 [features]
 default = []
-float = ["geometry3d/float"]
+float = ["geometry3d/float", "rhai/f32_float"]
+wasm = ["rhai/wasm-bindgen"]
