--- a/.github/workflows/ioreference.yaml
+++ b/.github/workflows/ioreference.yaml
@@ -1,4 +1,4 @@
-name: TestAndDeployDoc
+name: IOReference
 
 on:
   push:
@@ -15,17 +15,11 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
-    - name: Build
-      run: cargo build --verbose
-    - name: Run tests
-      run: cargo test --verbose
-    - name: Build Float
-      run: cargo build --verbose --features float
-    - name: Run tests Float
-      run: cargo test --verbose --features float
+    - uses: actions/checkout@v2        
     - name: Install MDBook
       run: cargo install mdbook
+    - name: Install MDBook Katex
+      run: cargo install mdbook-katex
     - name: Build Book
       run: mdbook build ioreference
     - name: Deploy
@@ -33,4 +27,3 @@ jobs:
       with:
         branch: gh-pages # The branch the action should deploy to.
         folder: ioreference/book # The folder the action should deploy.
-
