--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,4 +1,4 @@
-name: IOReference
+name: Build
 
 on:
   push:
@@ -20,4 +20,4 @@ jobs:
     steps:
     - uses: actions/checkout@v1   
     - name: Build Float
-      run: cargo build --verbose --features float --features simple_test_models/float
+      run: cargo build --verbose --features float 
