--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,21 +4,39 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-        
         {
             "type": "lldb",
             "request": "launch",
-            "name": "Debug unit tests in library 'building_model'",
+            "name": "Debug unit tests in library 'simple_model'",
             "cargo": {
                 "args": [
                     "test",
                     "--no-run",
                     "--lib",
-                    "--package=building_model"
+                    "--package=simple_model"
                 ],
                 "filter": {
-                    "name": "building_model",
+                    "name": "simple_model",
                     "kind": "lib"
+                }
+            },
+            "args": [],
+            "cwd": "${workspaceFolder}"
+        },
+        {
+            "type": "lldb",
+            "request": "launch",
+            "name": "Debug benchmark 'benchmark'",
+            "cargo": {
+                "args": [
+                    "test",
+                    "--no-run",
+                    "--bench=benchmark",
+                    "--package=simple_model"
+                ],
+                "filter": {
+                    "name": "benchmark",
+                    "kind": "bench"
                 }
             },
             "args": [],
