--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,17 +4,14 @@ version = "0.1.0"
 authors = ["German Molina <germolinal@gmail.com>"]
 edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-[lib]
-crate-type = ["cdylib", "rlib"]
 
 
 [dependencies]
 calendar = { git = "https://github.com/SIMPLE-BuildingSimulation/calendar.git" }
 geometry3d = {git = "https://github.com/SIMPLE-BuildingSimulation/geometry3d.git"}
 schedule = { git = "https://github.com/SIMPLE-BuildingSimulation/schedule.git" }
-building_state_macro = { git = "https://github.com/SIMPLE-BuildingSimulation/building_state_macro.git" }
-# building_state_macro = { path = "../building_state_macro" }
+# building_state_macro = { git = "https://github.com/SIMPLE-BuildingSimulation/building_state_macro.git" }
+building_state_macro = { path = "../building_state_macro" }
 rhai = { version = "1.1.2" }
 
 
