Input Output works... Docs do not... Legacy still needed

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,7 @@
+
+[workspace]
+members = ['derive']
+
 [package]
 name = "simple_model"
 version = "0.1.0"
@@ -7,11 +11,10 @@ edition = "2018"
 
 
 [dependencies]
+derive = { path = "derive" } 
 calendar = { git = "https://github.com/SIMPLE-BuildingSimulation/calendar.git" }
 geometry3d = {git = "https://github.com/SIMPLE-BuildingSimulation/geometry3d.git"}
 schedule = { git = "https://github.com/SIMPLE-BuildingSimulation/schedule.git" }
-building_state_macro = { git = "https://github.com/SIMPLE-BuildingSimulation/building_state_macro.git" }
-# building_state_macro = { path = "../building_state_macro" }
 rhai = { version = "1.1.2" }
 
 
