--- a/.github/workflows/coverage.yaml
+++ b/.github/workflows/coverage.yaml
@@ -1,6 +1,6 @@
 on: [push]
 
-name: build
+name: Coverage
 
 jobs:
   check:
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Install stable toolchain
         uses: actions-rs/toolchain@v1
@@ -27,3 +27,12 @@ jobs:
         with:
           name: code-coverage-report
           path: coverage.xml
+
+      - name: 'push coverage'
+      - uses: actions/checkout@v3
+      - run: |          
+          git config user.name github-actions
+          git config user.email github-actions@github.com
+          git add .
+          git commit -m "coverage bot"
+          git push
