--- a/.github/workflows/coverage.yaml
+++ b/.github/workflows/coverage.yaml
@@ -28,10 +28,10 @@ jobs:
           name: code-coverage-report
           path: coverage.xml
 
-      - name: 'push coverage'      
-      - run: |          
-          git config user.name github-actions
-          git config user.email github-actions@github.com
-          git add .
-          git commit -m "coverage bot"
-          git push
+      # - name: 'push coverage'      
+      #   run: |          
+      #     git config user.name github-actions
+      #     git config user.email github-actions@github.com
+      #     git add .
+      #     git commit -m "coverage bot"
+      #     git push
