--- a/.github/workflows/coverage.yaml
+++ b/.github/workflows/coverage.yaml
@@ -1,58 +1,34 @@
-on:
-  push:
-    branches: [master]
-  pull_request:
-name: coverage
+on: [push]
+
+name: Coverage
+
 jobs:
-  test:
+  check:
+    name: Rust project
     runs-on: ubuntu-latest
-    container:
-      image: xd009642/tarpaulin
-      options: --security-opt seccomp=unconfined
     steps:
-      - uses: actions/checkout@v2
-      - name: Generate code coverage
-        run: |
-          cargo tarpaulin --verbose --timeout 120 --out Xml
-      - name: Upload to codecov.io
-        uses: codecov/codecov-action@v2
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+      - name: Install stable toolchain
+        uses: actions-rs/toolchain@v1
         with:
-          fail_ci_if_error: true
+          toolchain: stable
+          override: true
 
-# on: [push]
+      - name: Run cargo-tarpaulin
+        uses: actions-rs/tarpaulin@v0.1
+        with:
+          version: '0.15.0'
+          args: '-- --test-threads 1'
 
-# name: Coverage
+      - name: Upload to codecov.io
+        uses: codecov/codecov-action@v1.0.2
+        #with:
+        #  token: ${{secrets.CODECOV_TOKEN}}
 
-# jobs:
-#   check:
-#     name: Rust project
-#     runs-on: ubuntu-latest
-#     steps:
-#       - name: Checkout repository
-#         uses: actions/checkout@v3
-
-#       - name: Install stable toolchain
-#         uses: actions-rs/toolchain@v1
-#         with:
-#           toolchain: stable
-#           override: true
-
-#       - name: Run cargo-tarpaulin
-#         uses: actions-rs/tarpaulin@v0.1
-#         with:
-#           version: '0.15.0'
-#           args: '-- --test-threads 1'
-      
-#       # - name: Archive code coverage results
-#       #   uses: actions/upload-artifact@v1
-#       #   with:
-#       #     name: code-coverage-report
-#       #     path: coverage.xml
-
-#       # - name: 'push coverage'      
-#       #   run: |          
-#       #     git config user.name github-actions
-#       #     git config user.email github-actions@github.com
-#       #     git add .
-#       #     git commit -m "coverage bot"
-#       #     git push
+      - name: Archive code coverage results
+        uses: actions/upload-artifact@v1
+        with:
+          name: code-coverage-report
+          path: cobertura.xml
