--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -16,6 +16,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v1    
+    - name: Set Toolchain
+      run: rustup default nightly   
     - name: Build doc
       run: RUSTDOCFLAGS="--html-in-header katex.html" cargo doc --document-private-items --no-deps
     - name: Set Index
