--- a/.github/workflows/style.yaml
+++ b/.github/workflows/style.yaml
@@ -5,6 +5,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
+      - name: Set Toolchain
+        run: rustup default nightly   
       - run: rustup component add clippy
       - uses: actions-rs/clippy-check@v1
         with:
